--- a/backend/registro.html
+++ b/backend/registro.html
@@ -163,6 +163,34 @@
 			? window.location.origin
 			: 'http://localhost:8000';
 		const endpoint = `${apiBase}/api/register`;
+        const csrfEndpoint = `${apiBase}/sanctum/csrf-cookie`;
+
+        const getXsrfToken = () => {
+            const match = document.cookie.match(/XSRF-TOKEN=([^;]+)/);
+            return match ? decodeURIComponent(match[1]) : null;
+        };
+
+        const buildJsonHeaders = () => {
+            const headers = {
+                'Content-Type': 'application/json',
+                'Accept': 'application/json'
+            };
+
+            const token = getXsrfToken();
+            if (token) {
+                headers['X-XSRF-TOKEN'] = token;
+            }
+
+            return headers;
+        };
+
+        const ensureCsrfCookie = async () => {
+            try {
+                await fetch(csrfEndpoint, { credentials: 'include' });
+            } catch (error) {
+                console.warn('No fue posible inicializar la cookie CSRF', error);
+            }
+        };
 
 		form.addEventListener('submit', async (event) => {
 			event.preventDefault();
@@ -174,12 +202,11 @@
 			const payload = Object.fromEntries(formData.entries());
 
 			try {
+				await ensureCsrfCookie();
 				const response = await fetch(endpoint, {
 					method: 'POST',
-					headers: {
-						'Accept': 'application/json',
-						'Content-Type': 'application/json'
-					},
+					headers: buildJsonHeaders(),
+					credentials: 'include',
 					body: JSON.stringify(payload)
 				});
 
